# dhad

./: .gitignore  CHANGELOG.md  CONFORMANCE.md  Cargo.toml  HANDOFF.md  LICENSE  PROOFS.md  README.ar.md  README.md  VECTOR-SCHEMA.md  generate_conformance.py  self_test.sh  specification.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
benches/: throughput.rs
examples/: export_vectors.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_determinism.rs  fuzz_mode_a.rs  fuzz_mode_b.rs
src/: base_map.rs  constants.rs  faps.rs  hash.rs  invariants.rs  lib.rs  mode_b.rs  model.rs  modes.rs  noise.rs  registry.rs
src/pipeline/: mod.rs  stage10_crf.rs  stage11_serialize.rs  stage12_hash.rs  stage1_utf8.rs  stage2_bom.rs  stage3_faps.rs  stage4_noise.rs  stage5_classify.rs  stage6_atoms.rs  stage7_flags.rs  stage8_digits.rs  stage9_prosody.rs
tests/: suite1_golden.rs  suite2_tagged.rs  suite3_adversarial.rs  suite4_properties.rs  suite5_coverage.rs  suite6_nfc_rejection.rs
tests/cases/: adversarial_cases.rs  golden_cases.rs  mod.rs  tagged_cases.rs
tools/: anchor_verify.py  bootstrap_golden_cases.py  verify_vectors.py
