[package]
name        = "dhad"
version     = "1.0.0"
edition     = "2021"
license     = "MIT"
description = "Deterministic Arabic text canonicalization with cryptographic hashing"
repository  = "https://github.com/dhad-lang/dhad"
keywords    = ["arabic", "nlp", "unicode", "canonicalization", "quran"]
categories  = ["text-processing", "encoding"]
readme      = "README.md"
exclude     = [
    "generate_conformance.py",
    "self_test.sh",
    "CONFORMANCE.md",
]

[dependencies]
sha2      = { version = "0.10.8", default-features = false, features = ["std"] }
crc32fast = "1.4.2"
thiserror = "1.0.61"
hex       = "0.4.3"

[dev-dependencies]
proptest  = "1.4.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "throughput"
harness = false

[[bin]]
name = "dhad-cli"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto       = true

[profile.test]
opt-level = 1
